--- a/GW_Heterozygosity_Variance.qmd
+++ b/GW_Heterozygosity_Variance.qmd
@@ -1044,50 +1044,53 @@ PCAmodelAll = plotPCA(genos_highHetVarRegion_imputed, ind_with_metadata_included
 
 display(PCAmodelAll.PCAfig)
 
-
-# choose inds with low IndHet in high HetVar region:
-indSelection = (meanAcrossRegionIndHetStan .< 1.75)    
-ind_with_metadata_lowIndHetStan = ind_with_metadata_included[indSelection, :]
-
-genos_lowIndHetStan = genos_highHetVarRegion[indSelection, :]
-
-# check that missing genotypes are encoded as `missing` rather than `-1`:
-if sum(ismissing.(genos_lowIndHetStan)) == 0
-    println("Warning: No `missing` genotypes to be imputed")
-end
-
-# impute missing genotypes:
-
-genos_lowIndHetStan_imputed = Impute.svd(Matrix{Union{Missing, Float32}}(genos_lowIndHetStan))
-
-flipPC1 = true
-flipPC2 = true
-
-PCAmodel = plotPCA(genos_lowIndHetStan_imputed, ind_with_metadata_lowIndHetStan, 
-            groups_to_plot_PCA, group_colors_PCA; 
-            sampleSet = "greenish warblers (lowIndHetStan)", regionText = regionText,
-            flip1 = flipPC1, flip2 = flipPC2,
-            lineOpacity = 0.7, fillOpacity = 0.6,
-            symbolSize = 14, showTitle = true,
-            xLabelText = string("Region PC1"), yLabelText = string("Region PC2"),
-            showPlot = false)
-
-display(PCAmodel.PCAfig)
-
 # Add PC values to metadata for individuals included in PCA above:
 if flipPC1
-    PCAmodel.metadata.PC1 = -1 .* PCAmodel.values[1,:]
+    PCAmodelAll.metadata.PC1 = -1 .* PCAmodelAll.values[1,:]
 else 
-    PCAmodel.metadata.PC1 = PCAmodel.values[1,:]
+    PCAmodelAll.metadata.PC1 = PCAmodelAll.values[1,:]
 end
 if flipPC2
-    PCAmodel.metadata.PC2 = -1 .* PCAmodel.values[2,:]
+    PCAmodelAll.metadata.PC2 = -1 .* PCAmodelAll.values[2,:]
 else
-    PCAmodel.metadata.PC2 = PCAmodel.values[2,:]
+    PCAmodelAll.metadata.PC2 = PCAmodelAll.values[2,:]
 end
-PCAmodel.metadata.PC3 = PCAmodel.values[3,:]
+PCAmodelAll.metadata.PC3 = PCAmodelAll.values[3,:]
+
+# For the next bit to work with above, make sure that all individuals in the above `plotPCA` command
+# are included in the `groups_to_plot_PCA`
+
+# choose inds with low IndHet in high HetVar region:
+indSelection_lowIndHetStan = (meanAcrossRegionIndHetStan .< 2) 
+
+#Plot only the lowIndHetStan individuals:
+
+f = CairoMakie.Figure()
+ax = Axis(f[1, 1],
+    title = "PC1 vs. PC2, only low heterozygosity",
+    xlabel = "Region PC1", xlabelsize = 24,
+    ylabel = "Region PC2", ylabelsize = 24,
+    autolimitaspect = 1)
+hidedecorations!(ax, label = false, ticklabels = false, ticks = false) # hide background lattice
+for i in eachindex(groups_to_plot_PCA) 
+    selection = (PCAmodelAll.metadata.Fst_group .== groups_to_plot_PCA[i]) .& indSelection_lowIndHetStan
+    CairoMakie.scatter!(ax, PCAmodelAll.metadata.PC1[selection], PCAmodelAll.metadata.PC2[selection], marker = :diamond, color = (group_colors_PCA[i], 0.6), markersize = 14, strokewidth=0.5, strokecolor = ("black", 0.7))
+end
+display(f)
 
 ```
+
+### Save the individual colors in the metadata
+
+```{julia}
+indColors = fill("", size(PCAmodelAll.metadata, 1))
+for i in axes(PCAmodelAll.metadata, 1)
+    indColors[i] = group_colors_PCA[findfirst(groups_to_plot_PCA .== PCAmodelAll.metadata.Fst_group[i])]
+end
+PCAmodelAll.metadata.indColorLeft = indColors
+PCAmodelAll.metadata.indColorRight = indColors
+```
+
 
 # Plot PC1 vs. PC2:
 
@@ -1100,8 +1103,8 @@ ax = Axis(f[1, 1],
     autolimitaspect = 1)
 hidedecorations!(ax, label = false, ticklabels = false, ticks = false) # hide background lattice
 for i in eachindex(groups_to_plot_PCA) 
-    selection = PCAmodel.metadata.Fst_group .== groups_to_plot_PCA[i]
-    CairoMakie.scatter!(ax, PCAmodel.metadata.PC1[selection], PCAmodel.metadata.PC2[selection], marker = :diamond, color = (group_colors_PCA[i], 0.6), markersize = 14, strokewidth=0.5, strokecolor = ("black", 0.7))
+    selection = PCAmodelAll.metadata.Fst_group .== groups_to_plot_PCA[i]
+    CairoMakie.scatter!(ax, PCAmodelAll.metadata.PC1[selection], PCAmodelAll.metadata.PC2[selection], marker = :diamond, color = (group_colors_PCA[i], 0.6), markersize = 14, strokewidth=0.5, strokecolor = ("black", 0.7))
 end
 display(f)
 ```
@@ -1117,8 +1120,8 @@ ax = Axis(f[1, 1],
     autolimitaspect = 1)
 hidedecorations!(ax, label = false, ticklabels = false, ticks = false) # hide background lattice
 for i in eachindex(groups_to_plot_PCA) 
-    selection = PCAmodel.metadata.Fst_group .== groups_to_plot_PCA[i]
-    CairoMakie.scatter!(ax, PCAmodel.metadata.PC1[selection], PCAmodel.metadata.PC3[selection], marker = :diamond, color = (group_colors_PCA[i], 0.6), markersize = 14, strokewidth=0.5, strokecolor = ("black", 0.7))
+    selection = PCAmodelAll.metadata.Fst_group .== groups_to_plot_PCA[i]
+    CairoMakie.scatter!(ax, PCAmodelAll.metadata.PC1[selection], PCAmodelAll.metadata.PC3[selection], marker = :diamond, color = (group_colors_PCA[i], 0.6), markersize = 14, strokewidth=0.5, strokecolor = ("black", 0.7))
 end
 display(f)
 ```
@@ -1135,40 +1138,46 @@ clusterNames = ["virLud",
                 "obs",
                 "plumb"]
 
-clusterColors = ["green",
+clusterColors = ["blue",
                 "grey",
                 "yellowgreen",
                 "orange",
                 "red"]
 
-vir_lud = (PCAmodel.metadata.PC1 .< -2.5)
-nit = (-2 .< PCAmodel.metadata.PC1 .< 1)
-troch = (-1 .< PCAmodel.metadata.PC1 .< 3) .& (PCAmodel.metadata.PC2 .< -3.2)
-obs = (1 .< PCAmodel.metadata.PC1 .< 2.5) .& (-3.2 .< PCAmodel.metadata.PC2 .< -1)
-plumb = (2.5 .< PCAmodel.metadata.PC1) .& (2 .< PCAmodel. PC2)
+virLud = (PCAmodelAll.metadata.PC1 .< -4) .& indSelection_lowIndHetStan
+nit = (-1 .< PCAmodelAll.metadata.PC1 .< 1) .& indSelection_lowIndHetStan
+troch = (1 .< PCAmodelAll.metadata.PC1 .< 3) .& 
+        (PCAmodelAll.metadata.PC2 .< -3.2) .& 
+        indSelection_lowIndHetStan
+obs = (1 .< PCAmodelAll.metadata.PC1 .< 2.5) .& 
+        (-3.2 .< PCAmodelAll.metadata.PC2 .< -1) .&
+        indSelection_lowIndHetStan
+plumb = (3 .< PCAmodelAll.metadata.PC1) .& 
+        (2.5 .< PCAmodelAll.PC2) .&
+        indSelection_lowIndHetStan
 
 # check the individuals in each group
-PCAmodel.metadata.Fst_group[vir_lud]
-PCAmodel.metadata.Fst_group[nit]
-PCAmodel.metadata.Fst_group[troch]
-PCAmodel.metadata.Fst_group[obs]
-PCAmodel.metadata.Fst_group[plumb]
+PCAmodelAll.metadata.Fst_group[virLud]
+PCAmodelAll.metadata.Fst_group[nit]
+PCAmodelAll.metadata.Fst_group[troch]
+PCAmodelAll.metadata.Fst_group[obs]
+PCAmodelAll.metadata.Fst_group[plumb]
 
-clusterArray = [vir_lud nit troch obs plumb]
+clusterArray = [virLud nit troch obs plumb]
 
 # show numbers in each group
-sum(clusterArray, dims=1)
+println("The numbers in each group are $(sum(clusterArray, dims=1)) and the sum of those is $(sum(sum(clusterArray, dims=1)))")
 
 # create vectors that indicate the groups and plot order for this analysis:
-clusterMembership = fill("none", nrow(PCAmodel.metadata))
-plotOrder = fill(-9, nrow(PCAmodel.metadata))
+clusterMembership = fill("none", nrow(PCAmodelAll.metadata))
+plotOrder = fill(-9, nrow(PCAmodelAll.metadata))
 for i in eachindex(clusterArray[1,:])
     clusterMembership[clusterArray[:,i]] .= clusterNames[i]
     plotOrder[clusterArray[:,i]] .= i
 end
 
 # Calculate allele freqs and sample sizes
-freqs, sampleSizes = getFreqsAndSampleSizes(genos_lowIndHetStan, clusterMembership, clusterNames)
+freqs, sampleSizes = getFreqsAndSampleSizes(genos_highHetVarRegion, clusterMembership, clusterNames)
 println("Calculated population allele frequencies and sample sizes")
 
 # Calculate per-site pi (within-group nucleotide distance)
@@ -1188,7 +1197,7 @@ regionPiTable = DataFrame(cluster = clusterNames, pi = getRegionPi(sitePi))
  Row │ cluster  pi         
      │ String   Float64    
 ─────┼─────────────────────
-   1 │ virLud   0.00782583
+   1 │ virLud   0.00792304
    2 │ nit      0.00320189
    3 │ troch    0.00734994
    4 │ obs      0.0101536
@@ -1199,10 +1208,10 @@ regionDxyTable = DataFrame(cluster_pair = pairwiseDxyClusterNames, Dxy = getRegi
  Row │ cluster_pair  Dxy       
      │ String        Float64   
 ─────┼─────────────────────────
-   1 │ virLud_nit    0.0333784
-   2 │ virLud_troch  0.0318611
-   3 │ virLud_obs    0.0351041
-   4 │ virLud_plumb  0.0329825
+   1 │ virLud_nit    0.0334156
+   2 │ virLud_troch  0.0318841
+   3 │ virLud_obs    0.0351279
+   4 │ virLud_plumb  0.0330054
    5 │ nit_troch     0.0314387
    6 │ nit_obs       0.0344624
    7 │ nit_plumb     0.0307517
@@ -1211,20 +1220,17 @@ regionDxyTable = DataFrame(cluster_pair = pairwiseDxyClusterNames, Dxy = getRegi
   10 │ obs_plumb     0.0265753 =#
 
 # Make a genotype-by-individual plot using all variable loci in the region,
-# by setting `Fst_cutoff` to super low value
-groupsToCompare = "vir_plumb"
-Fst_cutoff = -100 # super low to show all SNPs
 missingFractionAllowed = 0.1
 # in metadata, replace `Fst_group` column with cluster info (needed for the function below):
-PCAmodel.metadata.Fst_group = clusterMembership
-PCAmodel.metadata.plot_order = plotOrder
+PCAmodelAll.metadata.Fst_group = clusterMembership
+PCAmodelAll.metadata.plot_order = plotOrder
 
 # limit the SNPs to those with variants greater than 50% in 
 # at least one pop, and less than 50% in at least one pop.
 # (So for each column in `freqs`, the maximum should be > 0.5 
 # and the minimum should be < 0.5)
 selectedSNPs = (vec(maximum(freqs, dims=1)) .> 0.5) .& (vec(minimum(freqs, dims=1)) .< 0.5)
-genos_selectedSNPs = genos_lowIndHetStan[:, selectedSNPs]
+genos_selectedSNPs = genos_highHetVarRegion[:, selectedSNPs]
 pos_selectedSNPs = pos_highHetVarRegion[selectedSNPs, :]
 Fst_selectedSNPs = Fst[:, selectedSNPs]
 freqs_selectedSNPs = freqs[:, selectedSNPs]
@@ -1233,12 +1239,225 @@ freqs_selectedSNPs = freqs[:, selectedSNPs]
 numIndsToPlot = [15, 15, 15, 15, 15, 15]
 
 genosForGBI, indMetadataforGBI = limitIndsToPlot(clusterNames, numIndsToPlot, 
-                                            genos_selectedSNPs, PCAmodel.metadata;
+                                            genos_selectedSNPs, PCAmodelAll.metadata;
                                             sortByMissing = true)
 
 plotGenotypeByIndividual(regionInfo, pos_selectedSNPs,
                 genosForGBI, indMetadataforGBI, freqs_selectedSNPs, clusterNames, clusterColors;
-                missingFractionAllowed = missingFractionAllowed)
+                missingFractionAllowed = missingFractionAllowed,
+                indColorRightProvided = true)
+```
+
+## Now show a GBI plot like above, but with heterozygotes:
+
+```{julia}
+
+clusterNamesWithHets = ["virLud",
+                        "virLud_nit",
+                        "nit",
+                        "virLud_troch",
+                        "troch",
+                        "obs",
+                        "obsHet",
+                        "obs_plumb",
+                        "plumb",
+                        "vir_plumb"]
+
+clusterColorsWithHets = ["blue",
+                        "slateblue1",
+                        "grey",
+                        "yellowgreen",
+                        "yellow",
+                        "orange",
+                        "darkgoldenrod1",
+                        "darkorange1",
+                        "red",
+                        "purple"]
+
+virLud_nit = (-4 .< PCAmodelAll.metadata.PC1 .< -2) .&
+                (0 .< PCAmodelAll.metadata.PC2 .< 2) .&
+                 .!indSelection_lowIndHetStan
+virLud_troch = (-2.5 .< PCAmodelAll.metadata.PC1 .< 0) .&
+                (-3.5 .< PCAmodelAll.metadata.PC2 .< 0) .&
+                 .!indSelection_lowIndHetStan
+obsHet = (1.5 .< PCAmodelAll.metadata.PC1 .< 3) .&
+                (-3.5 .< PCAmodelAll.metadata.PC2 .< -1) .&
+                 .!indSelection_lowIndHetStan
+obs_plumb = (2.5 .< PCAmodelAll.metadata.PC1 .< 4) .&
+                (-1 .< PCAmodelAll.metadata.PC2 .< 2) .&
+                 .!indSelection_lowIndHetStan
+vir_plumb = (-2 .< PCAmodelAll.metadata.PC1 .< 2) .&
+                (2 .< PCAmodelAll.metadata.PC2 .< 4) .&
+                 .!indSelection_lowIndHetStan
+
+# check the individuals in each group
+PCAmodelAll.metadata.Fst_group[virLud]
+PCAmodelAll.metadata.Fst_group[virLud_nit]
+PCAmodelAll.metadata.Fst_group[nit]
+PCAmodelAll.metadata.Fst_group[virLud_troch]
+PCAmodelAll.metadata.Fst_group[troch]
+PCAmodelAll.metadata.Fst_group[obs]
+PCAmodelAll.metadata.Fst_group[obsHet]
+PCAmodelAll.metadata.Fst_group[obs_plumb]
+PCAmodelAll.metadata.Fst_group[plumb]
+PCAmodelAll.metadata.Fst_group[vir_plumb]
+
+clusterArray = [virLud virLud_nit nit virLud_troch troch obs obsHet obs_plumb plumb vir_plumb]
+
+sum(clusterArray, dims=1)
+
+if sum(sum(clusterArray, dims=1)) == size(PCAmodelAll.metadata, 1)
+    println("Good news: Individuals included in a group matches total number of individuals")
+end
+
+# create vectors that indicate the groups and plot order for this analysis:
+clusterMembershipWithHets = fill("none", nrow(PCAmodelAll.metadata))
+plotOrderWithHets = fill(-9, nrow(PCAmodelAll.metadata))
+for i in eachindex(clusterArray[1,:])
+    clusterMembershipWithHets[clusterArray[:,i]] .= clusterNamesWithHets[i]
+    plotOrderWithHets[clusterArray[:,i]] .= i
+end
+
+# Add column to main metadata object containing the cluster membership for this highHet region:
+command = "ind_with_metadata_included." * chr * "_cluster = clusterMembershipWithHets"
+eval(Meta.parse(command)) # this executes the command constructed above
+
+# in metadata, replace `Fst_group` column with cluster info (needed for the function below):
+PCAmodelAll.metadata.Fst_group = clusterMembershipWithHets
+PCAmodelAll.metadata.plot_order = plotOrderWithHets
+
+# limit the number of individuals per group to plot
+numIndsToPlotWithHets = fill(15, length(clusterNamesWithHets))
+
+genosForGBI, indMetadataforGBI = limitIndsToPlot(clusterNamesWithHets, numIndsToPlotWithHets, 
+                                            genos_selectedSNPs, PCAmodelAll.metadata;
+                                            sortByMissing = true)
+
+plotGenotypeByIndividual(regionInfo, pos_selectedSNPs,
+                genosForGBI, indMetadataforGBI, freqs_selectedSNPs, clusterNamesWithHets, clusterColorsWithHets;
+                missingFractionAllowed = missingFractionAllowed,
+                indColorLeftProvided = false,
+                indColorRightProvided = true)
+```
+
+
+## Show just the west area (without nitidus)
+
+```{julia}
+
+clusterNamesWithHetsWest = ["virLud",
+                        "virLud_troch",
+                        "troch"]
+
+clusterColorsWithHetsWest = ["blue",
+                        "yellowgreen",
+                        "yellow"]
+
+# limit the SNPs to those with variants greater than 50% in 
+# at least one pop, and less than 50% in at least one pop.
+# (So for each column in `freqs`, the maximum should be > 0.5 
+# and the minimum should be < 0.5)
+# Calculate allele freqs and sample sizes
+freqs, sampleSizes = getFreqsAndSampleSizes(genos_selectedSNPs, clusterMembershipWithHets, clusterNamesWithHetsWest)
+println("Calculated population allele frequencies and sample sizes")
+selectedSNPs = (vec(maximum(freqs, dims=1)) .> 0.5) .& (vec(minimum(freqs, dims=1)) .< 0.5)
+genos_selectedSNPs2 = genos_selectedSNPs[:, selectedSNPs]
+pos_selectedSNPs2 = pos_selectedSNPs[selectedSNPs, :]
+freqs_selectedSNPs2 = freqs[:, selectedSNPs]
+
+numIndsToPlotWithHets = [100, 100, 100]
+
+genosForGBI, indMetadataforGBI = limitIndsToPlot(clusterNamesWithHetsWest, numIndsToPlotWithHets, 
+                                            genos_selectedSNPs2, PCAmodelAll.metadata;
+                                            sortByMissing = true)
+
+plotGenotypeByIndividual(regionInfo, pos_selectedSNPs2,
+                genosForGBI, indMetadataforGBI, freqs_selectedSNPs2, clusterNamesWithHetsWest, clusterColorsWithHetsWest;
+                missingFractionAllowed = missingFractionAllowed,
+                indColorLeftProvided = false,
+                indColorRightProvided = true)
+
+```
+
+
+## Show just the east area
+
+```{julia}
+
+clusterNamesWithHetsWest = ["troch",
+                            "obs",
+                            "obsHet",
+                            "obs_plumb",
+                            "plumb",]
+
+clusterColorsWithHetsWest = ["yellow",
+                            "orange",
+                            "darkgoldenrod1",
+                            "darkorange1",
+                            "red"]
+
+# limit the SNPs to those with variants greater than 50% in 
+# at least one pop, and less than 50% in at least one pop.
+# (So for each column in `freqs`, the maximum should be > 0.5 
+# and the minimum should be < 0.5)
+# Calculate allele freqs and sample sizes
+freqs, sampleSizes = getFreqsAndSampleSizes(genos_selectedSNPs, clusterMembershipWithHets, clusterNamesWithHetsWest)
+println("Calculated population allele frequencies and sample sizes")
+selectedSNPs = (vec(maximum(freqs, dims=1)) .> 0.5) .& (vec(minimum(freqs, dims=1)) .< 0.5)
+genos_selectedSNPs2 = genos_selectedSNPs[:, selectedSNPs]
+pos_selectedSNPs2 = pos_selectedSNPs[selectedSNPs, :]
+freqs_selectedSNPs2 = freqs[:, selectedSNPs]
+
+numIndsToPlotWithHets = [100, 100, 100, 100, 100]
+
+genosForGBI, indMetadataforGBI = limitIndsToPlot(clusterNamesWithHetsWest, numIndsToPlotWithHets, 
+                                            genos_selectedSNPs2, PCAmodelAll.metadata;
+                                            sortByMissing = true)
+
+plotGenotypeByIndividual(regionInfo, pos_selectedSNPs2,
+                genosForGBI, indMetadataforGBI, freqs_selectedSNPs2, clusterNamesWithHetsWest, clusterColorsWithHetsWest;
+                missingFractionAllowed = missingFractionAllowed,
+                indColorLeftProvided = false,
+                indColorRightProvided = true)
+
+```
+
+## Show just the northern area
+
+```{julia}
+
+clusterNamesWithHetsWest = ["virLud",
+                            "vir_plumb",
+                            "plumb"]
+
+clusterColorsWithHetsWest = ["blue",
+                            "purple",
+                            "red"]
+
+# limit the SNPs to those with variants greater than 50% in 
+# at least one pop, and less than 50% in at least one pop.
+# (So for each column in `freqs`, the maximum should be > 0.5 
+# and the minimum should be < 0.5)
+# Calculate allele freqs and sample sizes
+freqs, sampleSizes = getFreqsAndSampleSizes(genos_selectedSNPs, clusterMembershipWithHets, clusterNamesWithHetsWest)
+println("Calculated population allele frequencies and sample sizes")
+selectedSNPs = (vec(maximum(freqs, dims=1)) .> 0.5) .& (vec(minimum(freqs, dims=1)) .< 0.5)
+genos_selectedSNPs2 = genos_selectedSNPs[:, selectedSNPs]
+pos_selectedSNPs2 = pos_selectedSNPs[selectedSNPs, :]
+freqs_selectedSNPs2 = freqs[:, selectedSNPs]
+
+numIndsToPlotWithHets = [100, 100, 100]
+
+genosForGBI, indMetadataforGBI = limitIndsToPlot(clusterNamesWithHetsWest, numIndsToPlotWithHets, 
+                                            genos_selectedSNPs2, PCAmodelAll.metadata;
+                                            sortByMissing = true)
+
+plotGenotypeByIndividual(regionInfo, pos_selectedSNPs2,
+                genosForGBI, indMetadataforGBI, freqs_selectedSNPs2, clusterNamesWithHetsWest, clusterColorsWithHetsWest;
+                missingFractionAllowed = missingFractionAllowed,
+                indColorLeftProvided = false,
+                indColorRightProvided = true)
+
 ```
 
 
@@ -1500,9 +1719,6 @@ regionDxyTable = DataFrame(cluster_pair = pairwiseDxyClusterNames, Dxy = getRegi
   10 │ obs_plumb     0.0300157 =#
 
 # Make a genotype-by-individual plot using all variable loci in the region,
-# by setting `Fst_cutoff` to super low value
-#groupsToCompare = "vir_plumb"
-#Fst_cutoff = -100 # super low to show all SNPs
 missingFractionAllowed = 0.1
 # in metadata, replace `Fst_group` column with cluster info (needed for the function below):
 PCAmodelAll.metadata.Fst_group = clusterMembership
@@ -1596,6 +1812,10 @@ for i in eachindex(clusterArray[1,:])
     clusterMembershipWithHets[clusterArray[:,i]] .= clusterNamesWithHets[i]
     plotOrderWithHets[clusterArray[:,i]] .= i
 end
+
+# Add column to main metadata object containing the cluster membership for this highHet region:
+command = "ind_with_metadata_included." * chr * "_cluster = clusterMembershipWithHets"
+eval(Meta.parse(command)) # this executes the command constructed above
 
 # in metadata, replace `Fst_group` column with cluster info (needed for the function below):
 PCAmodelAll.metadata.Fst_group = clusterMembershipWithHets
